JGlideMon ChangeLog

Version 0.17
------------
- Fixed Parse Log File dialog box and added a progress bar
  if the log file is very large.
- Added fullscreen option to the Screenshot menu.

Version 0.16
------------
- Added a bunch of options to control alerts. See the Alerts
  configuration tab.
- Added ability to retrieve item's mediam AH price instead of
  vendor price based on its name or quality. See the Loot
  configuration tab.
- A spiffy help file is now distributed with JGlideMon.
- A spiffy installer is now available for Windows.

Version 0.15
------------
- Multiple Glider support is finally available. You no longer need
  to run separate copies of JGlideMon to monitor multiple Gliders.
  This functionality is accessible via the Servers menu.
- You can now change JGlideMon's icon that appears in the tray
  and the taskbar.
- The configuration settings have been converted to Java's
  built in Properties type. Your JGlideMon.ini will automatically
  be converted to JGlideMon.properties.
- The Stuck configuration tab has been renamed Restarter.
  Additionally, options have been added to restart Glider
  when an exception log entry is received shortly before
  a status entry indicating Glider stopped, when
  "Inventory does not appear to be going up" is received,
  (I have this problem when BottomlessBag autosells it lags,
  this affects profiles that have vendor waypoints),
  and when "Couldn't activate flight" is received when running
  profile groups. There is a built in delay before sending the
  /startglide command again for all options.
- Renamed Urgent Log tab to Urgent and added sub-tabs for
  Logs and a new Followers tab that tracks "New friend",
  "Removing friend", and "Being followed by" Glider log entries.
- Added a sub-menu to the Screenshots menu for restoring,
  shrinking, and hiding the WoW windows (assuming you're
  dual gliding/running background mode). Note that if a
  window is hidden, it must be restored first before you