@@ -1,0 +1,33 @@
+/*
+ * -----LICENSE START-----
+ * JGlideMon - A Java based remote monitor for MMO Glider
+ * Copyright (C) 2007 - 2008 Tim
+ * 
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ * -----LICENSE END-----
+ */
+package jgm.test;
+
+import jgm.util.Sound;
+
+public class SoundTest {
+	public static void main(String[] args) {
+		System.out.println("Playing BEING_FOLLOWED...");
+		Sound.File.BEING_FOLLOWED.play();
+		
+		System.out.println("Playing BEING_ATTACKED...");
+		Sound.File.BEING_ATTACK.play();
+	}
+}
